Filter out affected elements with unsupported ecosystem when getting the vulnerabilities